# iwencai_skills

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  iwencai_cli.py  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
specs/: ARCHITECTURE.SPEC.yaml  CLI_UX.SPEC.yaml  HTTP_FAMILIES.SPEC.yaml  PUBLISHING.SPEC.yaml  QUALITY_GATES.SPEC.yaml  QUERY_AUTHORING.RULE.yaml  QUERY_AUTHORING.SPEC.yaml
tests/: cli_smoke.py  helpers.py  release_preflight.py  test_architecture_contract.py  test_cli_ux_contract.py  test_cli_ux_unit.py  test_env_loading_unit.py  test_http_families_contract.py  test_packaging_contract.py  test_publishing_contract.py  test_quality_gates_contract.py  test_query2data_unit.py  test_query_authoring_contract.py  test_search_unit.py  test_simtrade_unit.py  test_skillbook_unit.py
